[package]
name = "tree-sitter-md"
description = "quarto grammar for the tree-sitter parsing library"
version = "0.1.5"
keywords = ["incremental", "parsing", "quarto"]
categories = ["parsing", "text-editors"]
repository = "https://github.com/MDeiml/tree-sitter-quarto"
edition = "2018"
license = "MIT"

build = "bindings/rust/build.rs"
include = [
  "bindings/rust/*",
  "tree-sitter-quarto/src/*",
  "tree-sitter-quarto-inline/src/*",
  "tree-sitter-quarto/queries/*",
  "tree-sitter-quarto-inline/queries/*",
  "benchmark/main.rs",
]

[lib]
path = "bindings/rust/lib.rs"

[dependencies]
tree-sitter = "~0.20"

[build-dependencies]
cc = "1.0"

[[bin]]
name = "benchmark"
path = "benchmark/main.rs"

[profile.release]
debug = true
